Port the phonix tracing code to ai module